src/rules/isort/snapshots/ruff__rules__isort__tests__insert_empty_lines.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 0
  fix:
    content: "import a\nimport b\n\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 0
  parent: ~
- kind:
    UnsortedImports: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 6
    column: 0
  fix:
    content: "import os\nimport sys\n\n\n"
    location:
      row: 4
      column: 0
    end_location:
      row: 6
      column: 0
  parent: ~
- kind:
    UnsortedImports: ~
  location:
    row: 14
    column: 0
  end_location:
    row: 16
    column: 0
  fix:
    content: "import os\nimport sys\n\n"
    location:
      row: 14
      column: 0
    end_location:
      row: 16
      column: 0
  parent: ~
- kind:
    UnsortedImports: ~
  location:
    row: 52
    column: 0
  end_location:
    row: 54
    column: 0
  fix:
    content: "import os\n\n\n"
    location:
      row: 52
      column: 0
    end_location:
      row: 54
      column: 0
  parent: ~

