src/rules/isort/snapshots/ruff__rules__isort__tests__lines_after_imports_lines_after_imports_func_after.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 13
    column: 0
  fix:
    content:
      - from __future__ import annotations
      - ""
      - from typing import Any
      - ""
      - from my_first_party import my_first_party_object
      - from requests import Session
      - ""
      - from . import my_local_folder_object
      - ""
      - ""
      - ""
    location:
      row: 1
      column: 0
    end_location:
      row: 13
      column: 0
  parent: ~

