src/rules/isort/snapshots/ruff__rules__isort__tests__magic_trailing_comma.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 2
    column: 0
  end_location:
    row: 39
    column: 0
  fix:
    content: "from glob import (\n    escape,  # Ends with a comment, should still treat as magic trailing comma.\n    glob,\n    iglob,\n)\n\n# No magic comma, this will be rolled into one line.\nfrom os import environ, execl, execv, path\nfrom sys import (\n    argv,\n    exit,\n    stderr,\n    stdout,\n)\n\n# These will be combined, but without a trailing comma.\nfrom foo import bar, baz\n\n# These will be combined, _with_ a trailing comma.\nfrom module1 import (\n    member1,\n    member2,\n    member3,\n)\n\n# These will be combined, _with_ a trailing comma.\nfrom module2 import (\n    member1,\n    member2,\n    member3,\n)\n"
    location:
      row: 2
      column: 0
    end_location:
      row: 39
      column: 0
  parent: ~

